discussion/kv_engine/153975/153975_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: Add support for Group Commit

Group Commit coalesces transactions in the WAL by grouping transactions
at the point of WAL fsync. If there are other writer threads wanting to
do a transaction, the current transaction will stall waiting for other
transactions to go. If there are no waiting transactions, the current
transaction will fsync and wait for all pending fsyncs to complete their
transactions before completing its transaction and trying write cache
flush.

Add magma_enable_group_commit and magma_wal_sync_time.

Change-Id: I23ae7c014691a873d9201021998fc062cc0b6549

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2021-06-29 20:46:22.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-29 21:38:50.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10315/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:442:28: error: no member named "EnableGroupCommit" in "magma::Magma::Config" [clang-diagnostic-error]
    configuration.magmaCfg.EnableGroupCommit =
                           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10315/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:442:28:
error: no member named "EnableGroupCommit" in "magma::Magma::Config" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10315/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37417/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc(442): error C2039: "EnableGroupCommit": is not a member of "magma::Magma::Config" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37417/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31915/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:442:28:
error: no member named "EnableGroupCommit" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31915/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10966/ : FAILURE

Compile error at [2021-06-29T21:00:54.159Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:442:28:
error: no member named "EnableGroupCommit" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10966/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12036/ : FAILURE

Compile error at [2021-06-29T21:16:18.002Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:442:28:
error: ?struct magma::Magma::Config? has no member named ?EnableGroupCommit?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12036/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12370/ : FAILURE

Compile error at [2021-06-29T21:21:15.102Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:442:28:
error: no member named "EnableGroupCommit" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12370/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19928/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8918/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11885/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Scott Lashley
Date: 2021-08-18 21:07:38.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
